feat: add chart into /api/alerts/descendant/anormal
