# backend/docs/swagger.json
@@ -198,6 +198,13 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
+                        "description": "查询步长(us)",
+                        "name": "step",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "string",
                         "description": "查询服务名",
                         "name": "service",
@@ -5201,10 +5208,17 @@
         "response.GetDescendantAnormalEventResponse": {
             "type": "object",
             "properties": {
+                "anormalCount": {
+                    "$ref": "#/definitions/response.TempChartObject"
+                },
                 "anormalEvents": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.AnormalEvent"
+                    "description": "AnormalEvents []model.AnormalEvent `json:\"anormalEvents\"`",
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/model.AnormalEvent"
+                        }
                     }
                 }
             }
