# backend/pkg/api/alertanalyze/func_getdescendantanormalevent.go
@@ -17,6 +17,7 @@ import (
 // @Produce json
 // @Param startTime query int64 true "查询开始时间"
 // @Param endTime query int64 true "查询结束时间"
+// @Param step query int64 true "查询步长(us)"
 // @Param service query string true "查询服务名"
 // @Param endpoint query string true "查询Endpoint"
 // @Param anormalTypes query string true "异常事件类型过滤"
